Job assignment is complete and ready for reviewing

--- a/tal-insurance-angular/src/app/app.component.html
+++ b/tal-insurance-angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <nav> 
   <a routerLink="/customers">Customer</a>&nbsp; 
-  <a href="#">Occupation Ratings</a>&nbsp;
-  <a href="#">Ratings</a>
+  <a href="/occupations">Occupation</a>&nbsp;
+  <a href="/ratings">Occupation rating</a>
 </nav>
 <router-outlet></router-outlet>
